--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <ul>Check out you're favorite recipes
+            <li><a href="./recipes/strogonoff.html">Strogonoff</a></li>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/risotto.html">Risotto</a></li>
+            <li><a href="./recipes/macncheese.html">Mac&Cheese</a></li>
+        </ul>
     </body>
 </html>
