Add the recipes pages and images

--- a/recipes/strogonoff.html
+++ b/recipes/strogonoff.html
@@ -6,6 +6,8 @@
     </head>
 
     <body>
+        <p><a href="../index.html">Home</a></p>
+
         <h1>Strogonoff Recipe</h1>
 
         <img src="../img/strogonoff.webp" alt="Strogonoff image" width="250">
@@ -18,7 +20,7 @@
 
         <h3>Ingredients</h3>
         <ul>
-            <li> 1 pound ground beef</li>
+            <li>1 pound ground beef</li>
             <li>½ teaspoon garlic powder</li>
             <li>½ teaspoon salt</li>
             <li>½ teaspoon ground black pepper</li>
@@ -31,19 +33,27 @@
 
         <h3>Directions</h3>
 
-        <p><strong>Step 1</strong></p>
-        <p>In a large skillet brown beef in oil over medium high heat. When meat is browned,</p>
-        <p>drain excess fat from skillet. Add garlic powder, salt and pepper and stir in.</p>
-
-        <p><strong>Step 2</strong></p>
-        <p>Add bouillon, onion and mushrooms to skillet and saute until onions are</p>
-        <p>translucent. Remove from heat (very important) and add sour cream. Stir all</p>
-        <p>together and serve over hot cooked egg noodles.</p>
-
+        <ol>
+            <li><strong>Step 1</strong></li>
+            <ul>
+                <li>In a large skillet brown beef in oil over medium high heat. When meat is browned,
+                drain excess fat from skillet. Add garlic powder, salt and pepper and stir in.</li>
+            </ul>
+        
+            <li><strong>Step 2</strong></li>
+                <ul>
+                    <li>Add bouillon, onion and mushrooms to skillet and saute until onions are
+                        translucent. Remove from heat (very important) and add sour cream. Stir all
+                        together and serve over hot cooked egg noodles.</li>
+                </ul>
+        </ol>
+        
         <h4>Nutrition Facts<small> (per serving)</small></h4>
-        <p>977 Calories</p>
-        <p>74g Fat</p>
-        <p>40g Carbs</p>
-        <p>38g Protein</p>
+        <ul>
+            <li>977 Calories</li>
+            <li>74g Fat</li>
+            <li>40g Carbs</li>
+            <li>38g Protein</li>
+        </ul>
     </body>
 </html>
