--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>Check out youre favorite recipes
+        <ul>Check out your favorite recipes
             <li><a href="./recipes/strogonoff.html">Strogonoff</a></li>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/risotto.html">Risotto</a></li>
